--- a/src/styles/_spacing.scss
+++ b/src/styles/_spacing.scss
@@ -37,6 +37,9 @@
 .block-spacing {
     padding: var(--sp-80) 0px;
 }
+.blog-spacing {
+    padding: var(--sp-56) var(--sp-50);
+}
 
 @media (max-width: 834px) {
   .primary-spacing {
@@ -103,6 +106,10 @@
 
   .block-spacing {
     padding: var(--sp-40) 0px;
+}
+
+.blog-spacing {
+    padding: var(--sp-40) var(--sp-16);
 }
 }
 
